added swagger for tags
